# helm

./: .gitignore  README.md  SUBMITTING_NOTIFICATIONS.md
.claude/: settings.json
.claude/hooks/: enforce_sleep_arm.py
.github/workflows/: pages.yml
backend/: .env.example  pyproject.toml  requirements.txt
backend/helm/: __init__.py  agent_cli.py  artifacts.py  config.py  main.py  models.py  notifications.py  position_watcher.py
backend/helm/ai/: __init__.py  brain.py  decisions.py  trader.py
backend/helm/api/: __init__.py  routes_agent.py  routes_ai.py  routes_feeds.py  routes_trading.py  websocket.py
backend/helm/data_seed/backtests/: aapl-momentum-2025q4.json  multi-nasdaq-2026q1.json
backend/helm/data_seed/risk/: 2026-05-15-eod.json
backend/helm/engine/: __init__.py  base.py  bridge_actor.py  demo_engine.py  events.py  manager.py  nautilus_engine.py
backend/helm/feeds/: __init__.py  cache.py  fetchers.py  openbb.py  sources.py
backend/scripts/: risk_analysis.py
docs/: AGENT_GUIDE.md  ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  theme.css  vite-env.d.ts
frontend/src/api/: client.ts  types.ts  ws.ts
frontend/src/components/: CommandPalette.tsx  CopilotPanel.tsx  Sidebar.tsx  TemplatesModal.tsx  ui.tsx
frontend/src/copilot/: engine.ts
frontend/src/hooks/: useMediaQuery.ts  useWsEvent.ts
frontend/src/lib/: cn.ts  format.ts
frontend/src/store/: workspace.ts
(+42 files in other folders)
