[project]
name = "helm-backend"
version = "0.1.0"
description = "Helm — open-source web backend for AI-driven algorithmic trading"
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "websockets>=14",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "python-dateutil>=2.9",
    "cachetools>=5.5",
]

[project.optional-dependencies]
nautilus = ["nautilus_trader>=1.200"]
openbb = ["openbb>=4.3"]
dev = ["ruff>=0.7", "pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
helm-agent = "helm.agent_cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
